crates/data-dict/tests/snapshots/validate_spec__s07_nested_list_wrong_representation.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: t
    columns:
      - name: grid
        type: list(list(number(quantity)))
        units: kg
        examples: [1, 2]
────────────────────────────────────────
error[S07]: A `list(list(number(quantity)))` column must describe its bounds with `range`.
  --> dict.yaml:7:15
   |
LL |   - name: t
LL |     columns:
LL |       - name: grid
LL |         type: list(list(number(quantity)))
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ has type `list(list(number(quantity)))` but is missing `range`
error[S07]: A `list(list(number(quantity)))` column must use `range`, not `examples`.
  --> dict.yaml:9:19
   |
LL |   - name: t
LL |     columns:
LL |       - name: grid
...
LL |         examples: [1, 2]
   |                   ^^^^^ has type `list(list(number(quantity)))` but uses `examples`
