crates/data-dict/tests/snapshots/validate_spec__s07_string_may_not_pair_a_range.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: t
    columns:
      - name: word
        type: string
        range: [a, z]
        examples: [a, m, z]
────────────────────────────────────────
error[S07]: A `string` column must not use `range`.
  --> dict.yaml:8:16
   |
LL |   - name: t
LL |     columns:
LL |       - name: word
LL |         type: string
LL |         range: [a, z]
   |                ^^^^^^ has type `string` but uses `range`
