crates/data-dict/tests/snapshots/validate_spec__s12_nan_is_not_an_example.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: table
    columns:
      - name: ratio
        type: number
        examples: [1.5, .nan, 3.5]
────────────────────────────────────────
error[S12]: Every `examples` value must have a place on the number line.
  --> dict.yaml:8:25
   |
LL |   - name: table
LL |     columns:
LL |       - name: ratio
LL |         type: number
LL |         examples: [1.5, .nan, 3.5]
   |                         ^^^^ is `.nan`
